downgrade to Java 17